<resources>
    <string name="app_name">Trivio</string>
    <string name="btn_jugar">JUGAR</string>
    <string name="btn_opciones">OPCIONES</string>
    <string name="game_name">Cuestionados</string>
    <string name="prev_btn_description">previous question</string>
    <string name="next_btn_description">next question</string>
    <string name="topic_icon_description">topic icon</string>

    <string-array name="modes_array">
        <item>Fácil</item>
        <item>Medio</item>
        <item>Dificil</item>
    </string-array>


    <string name="options_Text">Opciones de juego\n</string>
    <string name="returnTextButton">Volver</string>
    <string name="workinprogress_Text">Trabajo en proceso...</string>
    <string name="score_final_image_description">Score final image</string>
    <string name="trivio_logo_description">trivio logo</string>
    <string name="total_answers_text">Haz respondido %1$s preguntas correctamente</string>
    <string name="used_hints_text">Haz utilizado %1$s pistas</string>
    <string name="unused_hints_text">Te quedaron %1$s pistas</string>
    <string name="final_score_text">Tu puntaje final es de %1$s puntos</string>
    <string name="btn_difficult">Puntuaciones</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game_text">Parece que no concluiste tu ultima parida</string>
    <string name="new_game_question">¿Deseas continuarla?</string>
    <string name="continue_btn_text">Continuar</string>
    <string name="new_game_btn_text">Nueva partida</string>
    <string name="ThemeText">Seleccione los temas deseados en la partida</string>
    <string name="string_cine">Cine</string>
    <string name="string_arte">Arte</string>
    <string name="string_historia">Historia</string>
    <string name="string_musica">Musica</string>
    <string name="string_ciencia">Ciencia</string>
    <string name="string_tecnologia">Tecnología</string>
    <string name="seleccione_la_dificultad">Seleccione la dificultad</string>
</resources>