<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.GameScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hint_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/brown"
            android:drawablePadding="8dp"
            android:fontFamily="@font/chewy"
            app:icon="@drawable/hint_icon"
            tools:text="5 pistas" />

        <TextView
            android:id="@+id/question_number"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fontFamily="@font/chewy"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="Pregunta 1 de 10" />

    </LinearLayout>

    <ImageView
        android:id="@+id/topic_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/topic_icon_description"
        tools:src="@drawable/palette" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        android:textStyle="italic"
        tools:text="Arte" />

    <TextView
        android:id="@+id/text_answered_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/chewy"
        android:textSize="18sp"
        tools:text="Tu respuesta fue correcta" />

    <TextView
        android:id="@+id/question"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        tools:text="What is your name?" />

    <Button
        android:id="@+id/option_1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/chewy"
        tools:text="Option 1" />

    <Button
        android:id="@+id/option_2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/chewy"
        tools:text="Option 2" />

    <Button
        android:id="@+id/option_3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/chewy"
        tools:text="Option 3" />

    <Button
        android:id="@+id/option_4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/chewy"
        tools:text="Option 4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:background="@null"
            android:contentDescription="@string/prev_btn_description"
            android:src="@drawable/previous" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:background="@null"
            android:contentDescription="@string/next_btn_description"
            android:src="@drawable/next" />


    </LinearLayout>

</LinearLayout>